# SimpleDOAS

./: l1bl2_config_baseline.yaml  pyproject.toml
Data/AFGL/: prof.AFGL.US.std.subliment  prof.AFGL.midl.sum  prof.AFGL.midl.wint  prof.AFGL.subp.sum  prof.AFGL.subp.wint  prof.AFGL.trop
Data/AbsorptionXsections/: optics_prop_new_calc.pkl
lib/: absorption_props.py  constants.py  hapi.py  libATM.py  libNumTools.py  libRT.py  test_connect.py
src/: hitran_simple.py  import_spectra.py  main.py  plot_nc_data.py  utilities.py
src/simpleDOAS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/unused/: cross_sections_v2.py  find_release_frames.py
